project/syntax_tests/tests_input/unit/bad/Bad20.ty
singleton class Math { 
    
    functions: {
        BadMethodName: () -> Int = 2 * 3 + 4 * 5
    }
}
